--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -1,4 +1,9 @@
-.secao-carta {
+#carta-preview-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#carta-preview {
   background-color: rgba(213, 224, 224, 0.644);
   border: 0.1ch solid rgba(46, 43, 43, 0.281);
   border-radius: 1.0em;
@@ -9,10 +14,15 @@
   padding: 10px;
 }
 
-#carta-preview {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#super-preview {
+  background-color: rgba(213, 224, 224, 0.644);
+  border: 0.3ch solid #f96565;
+  border-radius: 1.0em;
+  font-family: sans-serif;
+  height: 450px;
+  margin: 0;
+  width: 350px;
+  padding: 10px;
 }
 
 .top-preview {
@@ -108,7 +118,8 @@
   margin-bottom: 10px;
 }
 
-.secao-carta #descricao {
+#carta-preview #descricao-preview,
+#super-preview #descricao-preview {
   border-style: none;
   height: 120px;
   width: 308px;
