--- a/src/CSS/Colecao.css
+++ b/src/CSS/Colecao.css
@@ -17,7 +17,19 @@
   border: 0.1ch solid rgba(46, 43, 43, 0.281);
   border-radius: 1.0em;
   font-family: sans-serif;
-  height: 460px;
+  height: 420px;
+  margin: 0;
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.carta-super {
+  background-color: rgba(213, 224, 224, 0.644);
+  border: 0.1ch solid #f96565;
+  border-radius: 1.0em;
+  font-family: sans-serif;
+  height: 420px;
   margin: 0;
   width: 300px;
   padding: 10px;
@@ -74,6 +86,7 @@
 .imagem {
   background-color: transparent;
   outline: none;
+  border-radius: 1em;
 }
 
 .secao-attr-colecao {
@@ -91,24 +104,28 @@
   align-items: center;
   justify-content: space-evenly;
   width: 25%;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 400;
   margin-top: 15px;
 }
 
 #descricao-colecao {
   border-style: none;
-  min-height: 110px;
-  max-height: 80px;
-  width: 263px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   line-height: 15px;
   background-color: transparent;
-  text-align: center;
-  font-size: 15px;
   resize: none;
-  color: #152222;
+  text-align: center;
+}
+
+#descricao-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80px;
+  max-height: 80px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
 }
 
 #botao-excluir{
