--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  width: 20%;
+  width: 22%;
   padding-left: 10px;
 }
 
@@ -70,9 +70,8 @@
 #botao-area-decks {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  width: 200px;
-  padding-right: 10px;
+  justify-content: right;
+  width: 300px;
 }
 
 #botao-area-criacao {
